# HumanBiasProject

./: .coveragerc  .gitignore  .pylintrc  Dockerfile  Dockerfile.backend  LICENSE  Procfile  README.md  devfile.yaml  docker-compose.yml  package-lock.json  package.json  prompts.json  pyproject.toml  tasks.py
.github/workflows/: main.yml
docs/: dokumentaatio.md  kayttoohje.md  rakenne.md
openshift/: humanbias-backend-buildconfig.yaml  humanbias-backend-resources.yaml  humanbias-frontend-buildconfig.yaml  humanbias-frontend-resources.yaml  humanbias-test-buildconfig.yaml  humanbias-test-deployment.yaml
src/: main.py
src/backend/: main.py  routes.py
src/backend/services/: agent.py  agent_manager.py  api_manager.py  dialog.py  dialog_manager.py  file_reader.py  formatter.py  service_handler.py  session_manager.py
src/backend/services/api/: anthropic.py  gemini.py  helpers.py  (+1 more)
src/backend/tests/: agent_manager_test.py  agent_test.py  anthropic_test.py  api_helpers_test.py  api_manager_test.py  dialog_manager_test.py  dialog_test.py  file_reader_test.py  formatter_test.py  gemini_test.py  openai_test.py  service_handler_test.py  session_manager_test.py
src/services/: agent.py  agent_manager.py  api_manager.py  formatter.py  service_handler.py
src/services/api/: gemini.py
src/services/io/: console_io.py
src/tests/: agent_manager_test.py  api_manager_test.py  formatter_test.py  service_handler_test.py
src/ui/: Dockerfile.frontend  package-lock.json  package.json
src/ui/public/: index.html
src/ui/src/: App.css  App.js  App.jsx  api.js  index.js
(+36 files in other folders)
