[tool.poetry]
name = "humanbiasproject"
version = "0.1.0"
description = ""
authors = ["Taina Hilliaho <taina.hilliaho@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
react= "^18.3.1",
react-dom= "^18.3.1",
react-scripts= "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
