[tool.poetry]
name = "humanbiasproject"
version = "0.1.0"
description = ""
authors = ["Taina Hilliaho <taina.hilliaho@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^3.0.3"
flask-cors = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.2.7"
pytest = "^8.3.2"
coverage = "^7.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
