[tool.poetry]
name = "humanbiasproject"
version = "0.1.0"
description = ""
authors = ["Taina Hilliaho <taina.hilliaho@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.3"
flask-cors = "^5.0.0"
google-generativeai = "^0.8.0"
python-dotenv = "^1.0.1"
openai = "^1.51.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.2.7"
pytest = "^8.3.2"
coverage = "^7.6.1"
invoke = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
